Changed the property file PATH and fixed spelling mistake

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-insert_user=true
-update_Address=true
+insert_user=false
+update_address=false
 address_user_count=0
 api=https://maps.googleapis.com/maps/api/geocode/json?address=
