Added another property

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 insert_user=false
 update_address=false
-address_user_count=0
+address_user_count=1163
 api=https://maps.googleapis.com/maps/api/geocode/json?address=
+total_hits_wanted=400
